# Os_experiment1

./: CMakeLists.txt  LICENSE  README.md  a.txt
include/os/: config.h  manager.h  pcb.h  queue.h  rcb.h  shell.h
src/: CMakeLists.txt  main.cc
src/os/: manager.cc  shell.cc
